- Updated - core/image styles output to img (as Gutenberg introduced border/border-radius controls)
- Updated - core/buttons and core/button increased CSS specificity for group and outline/link styles
- Updated - core/page-list default pages number
- Updated - skip link PHP js code to JavaScript file
- Updated - Footers columns vertical alignment after Layout support updates
- Fixed - spacings: margin/padding after Gutenberg update with spacing.spacingSizes (theme.json)
- Fixed - Media/Text mobile figure order after markup update
- Fixed - Gallery flex layout
- Fixed - single.html template link color for post meta
- Added - footer .flex-wrap to columns (due to WP layout nowrap CSS)
- Added - whatsapp icon styles
- Added - spacing utilities in theme.json

v5.6.6
- Updated - Theme description
- Added - query/overlay template part with new base design for post listing

v5.6.5
- Fixed - core/paragraph top margin in theme.json (it should be 0)

v5.6.4
- Removed - Old Customizer activation errors (if server does not match our requirements) and code.
- Updated - Navigation block custom styles to use main stylesheed as dependency
- Updated - Moved some styles from stylesheet to global styles / added blockGap (with reset on fist .wp-site-blocks children)
- Fixed - CSS: moved box sizing to global styles to fix an issue with loaders in FSE admin
- Added - WooCommerce to render fields using woocommerce_form_field() with wecodeart_input() function (excepting: state/country/select/radio)

v5.6.3
- Removed - Deprecated .site-header/footer classes
- Updated - Gutenberg block overwrites - small refactoring on their register method
- Updated - Social icons NOT to load styles for individual icons more than once (if multiple blocks are on the same page)
- Fixed - Bug with spacer height default value (in CSS processor)
- Fixed - Button double CSS rules for active style
- Fixed - Couple of wrong local translations in Romanian.
- Fixed - CSS for .text-wrap utility