@@ -30,5 +30,6 @@
 		<!-- /wp:column -->
 	</div>
 	<!-- /wp:columns -->
+	<!-- wp:pattern {"slug":"wecodeart/footer-credits"} /-->
 </div>
 <!-- /wp:group -->
