@@ -29,3 +29,4 @@
 	<!-- /wp:column -->
 </div>
 <!-- /wp:columns -->
+<!-- wp:pattern {"slug":"wecodeart/footer-credits"} /-->
