@@ -5,6 +5,7 @@ v5.6.7
 - Updated - core/page-list default pages number
 - Updated - skip link PHP js code to JavaScript file
 - Updated - Footers columns vertical alignment after Layout support updates
+- Updated - core/recent-posts and core/recent-comments entry meta layout
 - Fixed - spacings: margin/padding after Gutenberg update with spacing.spacingSizes (theme.json)
 - Fixed - Media/Text mobile figure order after markup update
 - Fixed - Gallery flex layout
